[package]
name = "contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = {version = "0.25.0"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
solana-program = "1.10.31"
mpl-token-metadata = {version = "1.2.7", features = ["no-entrypoint"]}

